Fixed typo in main activity (missing parenthesis) and made big changes to spinner and PurchaseActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Budgeter</string>
 
-    <string-array name="category_names">
+    <string-array name="categories">
+        <item>Select Category...</item>
         <item>Utilities</item>
         <item>Food</item>
         <item>Housing</item>
